# OpenAi-SDK

./: Readme.md  hello_Agent.ipynb
00-UV/: commands.md
00-UV/hello/: README.md  pyproject.toml
00-UV/project_01/: pyproject.toml
01-chainlit/hello_chainlit/: README.md  pyproject.toml
02-hello_Agent/: .env  0.0.7  README.md
02-hello_Agent/hello_chainlit/: .gitignore  pyproject.toml
02-hello_Agent/hello_chainlit/src/hello_chainlit/: hello_Agent.py  tempCodeRunnerFile.py
03-Streaming/: README.md  chatbot.py  streaming.md
